# project_SOCS_code

./: .gitignore  LICENSE  README.md  pyproject.toml  working_model.ipynb
notebooks/: example.ipynb
src/: BaloonWindkessel.py  calculate_averages.py  calculate_paths.py  example.py  first_parameter_sweep.py  parameter_sweep.py  per_patient_simulation.py  simulate_time_series.py
