[project]
authors = [
  {name = "Lukas Prader", email = "prader@student.chalmers.se"},
    {name = "Daniel Peña Fonseca", email = "danielfo@student.chalmers.se"}
]
name = "project_SOCS"
version = "0.1.0"
description = "Project for Simulation of Complex Systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "matplotlib>=3.10.7",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["ANN", "A", "COM", "C4", "ICN", "PIE", "SIM", "I", "NPY", "PD", "N", "PERF", "D"]
